# theta-bot

./: .gitignore  .gitignore.new  ANALYSIS_POOR_RESULTS.md  BINANCE_DATA_TEST_REPORT.md  BIQUATERNION_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONFIDENCE_SNR_IMPLEMENTATION_SUMMARY.md  COPILOT_INSTRUCTIONS_LOG_PHASE.md  CORE_ENGINE_SUMMARY.md  CTT_README.md  DERIVATIVES_DRIFT_SUMMARY.md  DIAGNOSTICS_INVESTIGATION_SUMMARY.md  DUAL_STREAM_EVALUATION_REPORT.md  DUAL_STREAM_IMPLEMENTATION.md  EXPERIMENT_REPORT.md  FINAL_REPORT.md  HYPERSPACE_DETECTOR_QUICKSTART.md  HYPERSPACE_DETECTOR_SECURITY.md  HYPERSPACE_HARDWARE_IMPLEMENTATION.md  HYPERSPACE_IMPLEMENTATION_COMPLETE.md  HYPERSPACE_WAVE_DETECTOR_DESIGN.md  HYSTERESIS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_KALMAN_FIX.md  IMPLEMENTATION_V9_SUMMARY.md  LIMIT_MAKER_IMPLEMENTATION.md  MELLIN_IMPLEMENTATION_SUMMARY.md  MERGE_READINESS.md  PATCH_NOTES.txt  PATCH_NOTES_search_and_replace.txt  PATCH_README.txt  PRODUCTION_PREPARATION.md  PRODUCTION_SUMMARY.md  QUANTILE_SIGNAL_MODE.md  README.md  README.txt  README_BIQUAT_PHASE.md  README_BIQUAT_PHASE.txt  README_CSV_FIX.md  (+220 more)
.tmp/: cleaned_bd2879c34f.csv
Roadmap/: COPILOT_BRIEF_v2.md  reliability.md  roadmap.md
backup/: README.txt  theta_eval_hbatch_biquat.py.20251019_221959.bak
bench/: benchmark_matrix.py  benchmark_pairs.py  benchmark_strategies.py  render_research_note.py  smoke_1m.py
theta_bot/: README.md  pyproject.toml
theta_bot/.github/workflows/: python-tests.yml
theta_bot/src/: theta_transform.py
(+593 files in other folders)
